--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "homepage": "https://anshud49.github.io/Freshly-Brewed",
+  "homepage": "https://anshud49.github.io/fbad/",
   "name": "heatmap",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
-    "deploy":"gh-pages -d build",
-    "predeploy":"npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
